cmake_minimum_required (VERSION 2.6)
project (LPRPC)
set (CMAKE_VERBOSE_MAKEFILE true)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${LPRPC_SOURCE_DIR}/build.out)
set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${LPRPC_SOURCE_DIR}/build.out)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${LPRPC_SOURCE_DIR}/build.out)
include_directories (${LPRPC_SOURCE_DIR}/include)
link_directories (${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
add_subdirectory (third-party)
add_subdirectory (src)
add_subdirectory (examples)
add_subdirectory (testing)
add_dependencies (src third-party)
add_dependencies (example src)
add_dependencies (testing src third-party)
